--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/png" href="assets/nave.png">
+    <link rel="stylesheet" href="" type="text/css" />
     <title>Blaster Run</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
@@ -20,13 +22,13 @@
     <script src="Balas.js"></script>
     <script src="VidaExtra.js"></script>
     <!-- Sistemas auxiliares -->
-    <script src="TextoFlutuante.js"></script>
+    <script src="textoFlutuante.js"></script>
     <script src="FundoEstrelado.js"></script>
-    <script src="TelaInicio.js"></script>
-    <script src="TelaGameOver.js"></script>
+    <script src="telaInicio.js"></script>
+    <script src="telaGameOver.js"></script>
     <!-- Script principal -->
     <script src="script.js"></script>
-    <!-- Scripts de terceiros -->
+    <!-- Scripts do P5.js -->
     <script src="https://cdn.jsdelivr.net/npm/p5@1.3.1/lib/p5.js"></script>
     <script src="https://unpkg.com/p5.collide2d"></script>
   </body>
