--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
     <!-- Classes que herdam -->
     <script src="Nave.js"></script>
     <script src="Inimigo.js"></script>
-    <script src="Balas.js"></script>
+    <script src="Bala.js"></script>
     <script src="VidaExtra.js"></script>
     <!-- Sistemas auxiliares -->
-    <script src="textoFlutuante.js"></script>
+    <script src="TextoFlutuante.js"></script>
+    <script src="TextoFlutuante.js"></script>
     <script src="FundoEstrelado.js"></script>
-    <script src="telaInicio.js"></script>
-    <script src="telaGameOver.js"></script>
+    <script src="TelaInicio.js"></script>
+    <script src="TelaGameOver.js"></script>
     <!-- Script principal -->
     <script src="script.js"></script>
   </body>
